fix(tab-group): fix underline bleeding (#1856)
* fix(tab-group): fix underline bleed

* fix(tab-group): fix token name

* fix(tab-group): resolve token name

--- a/projects/ng-aquila/src/shared-styles/theming/tokens.scss
+++ b/projects/ng-aquila/src/shared-styles/theming/tokens.scss
@@ -2372,6 +2372,10 @@ $nx-theme: (
   tab-expert-bottom-border-color: #dadada,
   tab-item-disabled-negative-color: negative-dimmed,
   tab-item-disabled-negative-border-color: negative-dimmed,
+  tab-header-offset: 16px,
+  tab-item-gap-horizontal: 32px,
+  tab-expert-item-padding: 8px,
+  tab-expert-item-active-padding: 4px,
   /* deprecated, not needed anymore, was used to show the indicator differently there is only one streamlined implementation now */
   tab-header-indicator-display: block,
   /* deprecated, not used anymore */ tab-item-scroll-color: ui-05,
